--- a/README
+++ b/README
@@ -24,11 +24,8 @@ This layer depends on:
 Patches
 =======
 
-Please submit any patches against the laird-cp layer to the
-xxxx mailing list (xxxx@zzzz.org) and cc: the maintainer:
-
-Maintainer: XXX YYYYYY <xxx.yyyyyy@zzzzz.com>
-
+Please submit any patches against the laird-cp layer to the e-mail:
+cs-support@lairdtech.com
 
 Table of Contents
 =================
@@ -61,4 +58,18 @@ other layers needed. e.g.:
 II. Misc
 ========
 
---- replace with specific information about the laird-cp layer ---
+This layer provides the following modules:
+    - Sterling 60 Wi-Fi driver and firmware
+    - Sterling WPA supplicant
+    - Laird NetworkManager
+
+ - To use Wi-Fi driver add "backports-laird" recipe to your image
+   1. Remove cfg80211 and mac80211 from the kernel config
+   2. Explicitly add the cfg80211 and mac80211 dependencies to the kernel config
+
+ - To use Sterling WPA Supplicant add "sterling-supplicant" recipe to your
+   image, and in local.conf or <disto>.conf add the following:
+        PREFERRED_PROVIDER_wpa-supplicant-cli = "sterling-supplicant"
+        PREFERRED_PROVIDER_wpa-supplicant-passphrase = "sterling-supplicant"
+
+ - To use Laird Network Manager add "laird-networkmanager" recipe to your image
