Updated Radio Yocto layer for release 60 - 7.0.0.139, LWB - 7.0.0.142
Bug 15330

--- a/README
+++ b/README
@@ -25,7 +25,7 @@ Patches
 =======
 
 Please submit any patches against the laird-cp layer to the e-mail:
-cs-support@lairdtech.com
+support@lairdconnect.com
 
 Table of Contents
 =================
