Updated support instructions

--- a/README
+++ b/README
@@ -21,11 +21,12 @@ This layer depends on:
   branch: master
 
 
-Patches
+Support, Patches and other help
 =======
 
-Please submit any patches against the laird-cp layer to the e-mail:
-support@lairdconnect.com
+If you require help with layer integration, or have any other questions or recommendations,
+please Open the Support Ticket at:
+https://www.lairdconnect.com/resources/support
 
 Table of Contents
 =================
