--- a/meta-summit-radio-pre-3.4/README
+++ b/meta-summit-radio-pre-3.4/README
@@ -79,19 +79,13 @@ Integration notes:
           to the kernel config
      bitbake <image name>
 
- - To use Summit Network Manager add the "summit-networkmanager-60" package to your image recipe
+ - To use Summit Network Manager add the "summit-networkmanager-xxx" package to your image recipe
 
  - Summit firmware and userspace packages are not provided on the public Github.  They must
    be manually downloaded and placed into <yocto top dir>/release folder if needed.
 
- - To use the Sterling supplicant:
-    - add the  "sterling-supplicant-<60|lwb>" package to your image recipe
-    - add the following to your local.conf or <distro>.conf:
-        PREFERRED_RPROVIDER_wpa-supplicant = "sterling-supplicant-<60|lwb>"
-        PREFERRED_RPROVIDER_wpa-supplicant-cli = "sterling-supplicant-<60|lwb>"
-        PREFERRED_RPROVIDER_wpa-supplicant-passphrase = "sterling-supplicant-<60|lwb>"
-
- - To use the Summit supplicant:
+  - To use Summit Supplicant (required, for radios):
+    - without it radios will not work correctly or at all 
     - add the  "summit-supplicant" package to your image recipe
     - add the following to your local.conf or <distro>.conf:
         PREFERRED_RPROVIDER_wpa-supplicant = "summit-supplicant"
