--- a/meta-summit-radio/README
+++ b/meta-summit-radio/README
@@ -82,14 +82,8 @@ Integration notes:
  - Summit firmware and userspace packages are not provided on the public Github.  They must
    be manually downloaded and placed into <yocto top dir>/release folder if needed.
 
- - To use the Sterling supplicant:
-    - add the  "sterling-supplicant-<60|lwb>" package to your image recipe
-    - add the following to your local.conf or <distro>.conf:
-        PREFERRED_RPROVIDER_wpa-supplicant = "sterling-supplicant-<60|lwb>"
-        PREFERRED_RPROVIDER_wpa-supplicant-cli = "sterling-supplicant-<60|lwb>"
-        PREFERRED_RPROVIDER_wpa-supplicant-passphrase = "sterling-supplicant-<60|lwb>"
-
- - To use the Summit supplicant:
+ - To use Summit Supplicant (required, for radios):
+    - without it radios will not work correctly or at all 
     - add the  "summit-supplicant" package to your image recipe
     - add the following to your local.conf or <distro>.conf:
         PREFERRED_RPROVIDER_wpa-supplicant = "summit-supplicant"
