--- a/README
+++ b/README
@@ -1,15 +1,22 @@
-We restructuring this repository. Now every release will have it's own branch. 
-Not all radios are necessarily supported on each release/branch, even though 
-recipes for all radios are present in each one.
+This repository has been restructured with a branch architecture based on
+radio release.  Each radio release is supported by a corresponding branch.
 
-lrd-y.0.... branches reserved for the engineering releases, they are generally not
-supported and have no expectaion of working properly, unless prior arrangement with
-sales has been made, and FAE directed you to use it
+See below for the branches that are supported for each radio family.
+Branches that are not listed for a particular radio are not supported and
+should not be used unless directed by an FAE.
 
-lrd-y.x.... branches usually release branch for one or more radios.
+**********************
+Summit 60 Series
+**********************
+  lrd-11.92.0.x
+  lrd-11.39.0.x
 
-Below are the branches to use for the last software release:
+**********************
+Sterling LWB Series
+**********************
+  lrd-39.0.x
 
-60: lrd-11.39.0.x
-lwb: lrd-11.39.0.x
-45/50 legacy: lrd-11.39.0.x
+**********************
+45/50 Legacy
+**********************
+  lrd-11.39.0.x
