--- a/README
+++ b/README
@@ -11,11 +11,17 @@ Summit/Sterling 60 Series
   lrd-11.171.0.x
 
 **********************
-Sterling LWB/IF Series
+Sterling LWB Series
+Sona IF Series
 **********************
   lrd-11.171.0.x
 
 **********************
-45/50 Legacy
+45 & 50 Series
+**********************
+  lrd-11.171.0.x
+
+**********************
+BD-SDMAC
 **********************
   lrd-11.171.0.x
