--- a/README
+++ b/README
@@ -8,8 +8,9 @@ should not be used unless directed by an FAE.
 **********************
 Summit/Sterling 60 Series
 **********************
+  lrd-11.236.0.x
   lrd-11.171.0.x
-
+  
 **********************
 Sterling LWB Series
 Sona IF Series
