--- a/README
+++ b/README
@@ -18,7 +18,7 @@ Sona IF Series
   lrd-11.171.0.x
 
 **********************
-45 & 50 Series
+MSD 45 & 50 Series
 **********************
   lrd-11.171.0.x
 
