--- a/README
+++ b/README
@@ -10,12 +10,14 @@ Summit/Sterling 60 Series
 **********************
   lrd-11.236.0.x
   lrd-11.171.0.x
+  lrd-12.29.0.x
   
 **********************
-Sterling LWB Series
 Sona IF Series
+Sterling LWB Series
 **********************
   lrd-11.171.0.x
+  lrd-12.29.0.x
 
 **********************
 MSD 45 & 50 Series
