--- a/README
+++ b/README
@@ -8,20 +8,25 @@ should not be used unless directed by an FAE.
 **********************
 Summit/Sterling 60 Series
 **********************
-  lrd-12.29.0.x
+  lrd-12.103.0.x
   
 **********************
 Sona IF Series
 Sterling LWB Series
 **********************
-  lrd-12.29.0.x
+  lrd-12.103.0.x
+
+**********************
+Sona NX Series
+**********************
+  lrd-12.103.0.x
 
 **********************
 MSD 45 & 50 Series
 **********************
-  lrd-12.29.0.x
+  lrd-12.103.0.x
 
 **********************
 BD-SDMAC
 **********************
-  lrd-12.29.0.x
+  lrd-12.103.0.x
